# gyazo

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  gyazo.perl  gyazo.rs
.github/workflows/: ci.yaml
src/: cli.rs  config.rs  gui.rs  image.rs  lib.rs
