[package]
name = "gyazo"
version = "0.0.0"
description = "Client library and CLI for Gyazo"
edition = "2024"
authors = ["Brooke Eva"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/brooke-eva/gyazo"
categories = ["api-bindings", "command-line-utilities", "multimedia"]

[[bin]]
name = "gyazo"
path = "gyazo.rs"
required-features = ["cli"]

[dependencies]
async-stream = "0.3"
dirs = "6"
futures-util = "0.3"
http = "1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = "1"
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.9"

clap = { version = "4", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
cli = ["dep:clap", "dep:tokio"]

[profile.release]
strip = true
# minor difference to default "s" (speed)
# opt-level = "z"
lto = true
